--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section class="hero">
       <div class="container">
-        <h1>Hi-Fi uden hype - dette er en opdatering af koden. Til Henrik til demo</h1>
+        <h1>Hi-Fi uden hype - dette er en opdatering af koden. Dims 12345</h1>
         <p>Headphones og earbuds til studier, pendling og gaming. Ingen tracking, ingen cookies – bare lyd.</p>
         <p><a class="btn" href="products.html">Se alle produkter</a></p>
       </div>
